Added payment features, image upload fixes, UPI scanner
